[gd_scene load_steps=7 format=3 uid="uid://30knxu35d0kb"]

[ext_resource type="Script" uid="uid://dinb2575bo6tl" path="res://Scripts/autoloads/pause_menu.gd" id="1_gmn1e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gmn1e"]
bg_color = Color(0.45288, 0.54, 0.4212, 0.74902)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="LabelSettings" id="LabelSettings_gmn1e"]
font_size = 40
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_gmn1e"]
color = Color(0.194702, 0.34375, 0.197031, 1)
thickness = 3

[sub_resource type="InputEventKey" id="InputEventKey_gmn1e"]
device = -1
alt_pressed = true
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_qluvc"]
events = [SubResource("InputEventKey_gmn1e")]

[node name="PauseMenu" type="CanvasLayer"]
layer = 2

[node name="Pause Menu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gmn1e")

[node name="Panel" type="Panel" parent="Pause Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gmn1e")

[node name="Label" type="Label" parent="Pause Menu/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_top = 20.0
offset_right = 128.0
offset_bottom = 75.0
grow_horizontal = 2
text = "PAUSE MENU"
label_settings = SubResource("LabelSettings_gmn1e")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Pause Menu/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 160.0
grow_horizontal = 2
theme_override_styles/separator = SubResource("StyleBoxLine_gmn1e")

[node name="VBoxContainer" type="VBoxContainer" parent="Pause Menu/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -120.0
offset_right = 174.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="Pause Menu/Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_right = NodePath("../FullscreenButton")
theme_override_font_sizes/font_size = 20
text = "RESUME"

[node name="FullscreenButton" type="CheckButton" parent="Pause Menu/Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
focus_neighbor_top = NodePath("../ResumeButton")
focus_neighbor_bottom = NodePath("../MainMenuButton")
theme_override_font_sizes/font_size = 20
shortcut = SubResource("Shortcut_qluvc")
text = "FULLSCREEN"
alignment = 1

[node name="MainMenuButton" type="Button" parent="Pause Menu/Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../FullscreenButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 20
text = "MAIN MENU"

[node name="QuitButton" type="Button" parent="Pause Menu/Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenuButton")
focus_neighbor_bottom = NodePath("../ResumeButton")
theme_override_font_sizes/font_size = 20
text = "QUIT"

[connection signal="pressed" from="Pause Menu/Panel/VBoxContainer/ResumeButton" to="Pause Menu" method="_on_resume_button_pressed"]
[connection signal="visibility_changed" from="Pause Menu/Panel/VBoxContainer/ResumeButton" to="Pause Menu" method="_on_resume_button_visibility_changed"]
[connection signal="pressed" from="Pause Menu/Panel/VBoxContainer/FullscreenButton" to="Pause Menu" method="_on_fullscreen_button_pressed"]
[connection signal="pressed" from="Pause Menu/Panel/VBoxContainer/MainMenuButton" to="Pause Menu" method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Pause Menu/Panel/VBoxContainer/QuitButton" to="Pause Menu" method="_on_button_pressed"]
